--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>v3am</title>
+    <title>Blue Sunset</title>
+    <meta name="project  begin" content="remember that blue sunset at left hand out window" />
   </head>
   <body>
     <div id="app"></div>
